--- a/microservices-finance/load-balancer/nginx.conf
+++ b/microservices-finance/load-balancer/nginx.conf
@@ -83,6 +83,11 @@ http {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+      # ================================
+    # 🔄 RATE LIMITING ZONES
+    # ================================
+    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=login:10m rate=5r/m;
     
     # ================================
     # 📱 MAIN SERVER BLOCK
@@ -90,10 +95,6 @@ http {
     server {
         listen 80;
         server_name localhost;
-        
-        # Rate limiting
-        limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
-        limit_req_zone $binary_remote_addr zone=login:10m rate=5r/m;
         
         # ================================
         # 🏥 HEALTH CHECKS
